<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Testin APM Test</string>
    <string name="http_client_test">HttpClient Test</string>
    <string name="http_url_connection_test">HttpURLConnection Test</string>
    <string name="ok_http_test">OkHttp Test</string>
    <string name="http_post">Http Post</string>
    <string name="http_get">Http Get</string>
    <string name="url">URL</string>
    <string name="sqlite_test">SQLite Test</string>
    <string name="sqlite_insert">Insert</string>
    <string name="sqlite_query">Query</string>
    <string name="sqlite_update">Update</string>
    <string name="sqlite_delete">Delete</string>
    <string name="bitmap_test">Bitmap Test</string>
    <string name="bitmap_decode_methods">Decode Methods</string>
    <string name="bitmap_test_image">Test Image</string>
    <string name="gson_test">Gson/Json Test</string>
    <string name="gson">Gson</string>
    <string name="json">Android Json</string>
    <string name="log_hint">Show statistic data here</string>
    <string name="fragment_test">Fragement Test with Thread</string>
    <string name="fragment1">This is fragment1</string>
    <string name="fragment2">This is fragment2</string>
    <string name="thread_test_image">Test thread by loading image</string>
    <string name="webview_test">Webview Test</string>
    <string name="tab_webview_test">Tab Webview Test</string>
    <string name="url_report_test">Rport URL Data Test</string>
    <string name="volley_test">Volley Test</string>
    <string name="edit_url_hint">Input URL</string>
    <string name="edit_method_hint">Input method</string>
    <string name="edit_content_type_hint">Input contentType</string>
    <string name="edit_latency_hint">Input latency</string>
    <string name="edit_bytes_recv_hint">Input bytesRecv</string>
    <string name="edit_bytes_send_hint">Input bytesSend</string>
    <string name="edit_status_code_hint">Input statusCode</string>
    <string name="report_url">Report</string>
    <string name="update_checking">App Update Checking</string>
    <string name="default_checking">Default Checking</string>
    <string name="customer_checking">Customer Checking</string>
</resources>
