<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <Button
        android:id="@+id/http_client_test_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/http_client_test"
        android:textSize="15sp" />

    <Button
        android:id="@+id/http_url_connection_test_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/http_url_connection_test"
        android:textSize="15sp" />

    <Button
        android:id="@+id/sqlite_test_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sqlite_test"
        android:textSize="15sp" />

    <Button
        android:id="@+id/bitmap_test_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bitmap_test"
        android:textSize="15sp" />

    <Button
        android:id="@+id/gson_test_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gson_test"
        android:textSize="15sp" />

    <Button
        android:id="@+id/fragment_test_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_test"
        android:textSize="15sp" />

    <Button
        android:id="@+id/webview_test_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/webview_test"
        android:textSize="15sp" />
</LinearLayout>

