<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dip"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp" >
        <Button
            android:id="@+id/insert_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:layout_weight="1"
            android:text="@string/sqlite_insert"
            android:textSize="13sp" />
        <Button
            android:id="@+id/query_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:layout_weight="1"
            android:text="@string/sqlite_query"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp" >
        <Button
            android:id="@+id/update_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:layout_weight="1"
            android:text="@string/sqlite_update"
            android:textSize="13sp" />
        <Button
            android:id="@+id/delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:layout_weight="1"
            android:text="@string/sqlite_delete"
            android:textSize="13sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/log_tv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:singleLine="false"
        android:scrollbars="vertical"
        android:text="@string/log_hint" />

</LinearLayout>

