<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dip"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp" >
        <Button
            android:id="@+id/http_post_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:layout_weight="1"
            android:text="@string/http_post"
            android:textSize="13sp" />

        <Button
            android:id="@+id/http_get_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:layout_weight="1"
            android:text="@string/http_get"
            android:textSize="13sp" />
    </LinearLayout>

    <Spinner
        android:id="@+id/url_list_sp"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:prompt="@string/url" />

    <TextView
        android:id="@+id/log_tv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:text="@string/log_hint" />

</LinearLayout>

